--- a/Appendix/App-Team-Org/index.html
+++ b/Appendix/App-Team-Org/index.html
@@ -946,7 +946,23 @@
   <h1>Appendix: Team Organization</h1>
 
 <h2 id="team-goals">Team Goals</h2>
-<p>List at least five shared goals that reflect a successful product with regard to EGR3X4. Focus on team / product goals that are deeper than "getting an A".</p>
+<ol>
+<li>
+<p>Deliver a functional embedded system that meets or exceeds the project requirements and demonstrates reliable performance under testing.</p>
+</li>
+<li>
+<p>Maintain consistent communication through agreed-upon channels (e.g., text  messaging, email, or weekly meetings) to keep everyone aligned and avoid last-minute surprises.</p>
+</li>
+<li>
+<p>Leverage individual strengths by assigning roles and responsibilities that balance skills, encourage learning, and share workload fairly.</p>
+</li>
+<li>
+<p>Develop professional engineering documentation (clear reports, diagrams, and well-commented code) that reflects industry standards and supports future maintainability.</p>
+</li>
+<li>
+<p>Foster a collaborative and respectful team culture where every member feels supported, accountable, and empowered to contribute ideas.</p>
+</li>
+</ol>
 <h2 id="communication-channels">Communication Channels</h2>
 <p><em><strong>Appendix Table 1</strong>: Team Member Communication Modes</em></p>
 <table>
