--- a/Appendix/App-Team-Org/index.html
+++ b/Appendix/App-Team-Org/index.html
@@ -976,10 +976,10 @@
 </thead>
 <tbody>
 <tr>
-<td>Member 1</td>
-<td>?</td>
-<td>?</td>
-<td>?</td>
+<td>Caleb Yuen</td>
+<td>Text Messaging</td>
+<td>Email</td>
+<td></td>
 </tr>
 <tr>
 <td>Member 2</td>
