--- a/index.html
+++ b/index.html
@@ -730,8 +730,8 @@ Dr. Kevin Nichols<br><p></p>
 <td><a href="https://cyuen808.github.io/">cyuen808.github</a></td>
 </tr>
 <tr>
-<td>Name #2</td>
-<td>link</td>
+<td>Roshan Roy Geoffrey Joe</td>
+<td><a href="https://roshanroy-r64x.github.io/">roshanroy-r64x.github</a></td>
 </tr>
 <tr>
 <td>Name #3</td>
