deploy: 01c1263b4383d93aaefcc35ddd836bf06d84bd8b

--- a/index.html
+++ b/index.html
@@ -734,8 +734,8 @@ Dr. Kevin Nichols<br><p></p>
 <td><a href="https://roshanroy-r64x.github.io/">roshanroy-r64x.github</a></td>
 </tr>
 <tr>
-<td>Name #3</td>
-<td>link</td>
+<td>Quinn Maness</td>
+<td><a href="https://qmaness-hue.github.io/">qmaness-hue.github</a></td>
 </tr>
 <tr>
 <td>Aaron Kiem</td>
