deploy: 0614f022f546e2a9f878bb24dfefb25b65733922

--- a/Appendix/App-Team-Org/index.html
+++ b/Appendix/App-Team-Org/index.html
@@ -982,10 +982,10 @@
 <td></td>
 </tr>
 <tr>
-<td>Member 2</td>
-<td>?</td>
-<td>?</td>
-<td>?</td>
+<td>Roshan Roy Geoffrey Joe</td>
+<td>4804171508</td>
+<td>groshanroy@gmail.com</td>
+<td>@roshizzle64 (Instagram)</td>
 </tr>
 <tr>
 <td>Member 3</td>
