deploy: 8c548b027b6dddfb7f2259b899530ee733db2797

--- a/Appendix/App-Team-Org/index.html
+++ b/Appendix/App-Team-Org/index.html
@@ -977,9 +977,9 @@
 <tbody>
 <tr>
 <td>Caleb Yuen</td>
-<td>Text Messaging</td>
-<td>Email</td>
-<td></td>
+<td>8084768018</td>
+<td>cyuen@asu.edu</td>
+<td>@hicaleb808 (Instagram)</td>
 </tr>
 <tr>
 <td>Roshan Roy Geoffrey Joe</td>
