deploy: f0d5be2bc3a789f0b05093d134fbfd59695cc15e

--- a/Appendix/App-Team-Org/index.html
+++ b/Appendix/App-Team-Org/index.html
@@ -988,10 +988,10 @@
 <td>@roshizzle64 (Instagram)</td>
 </tr>
 <tr>
-<td>Member 3</td>
-<td>?</td>
-<td>?</td>
-<td>?</td>
+<td>Quinn Maness</td>
+<td>9707590355</td>
+<td>qmaness@asu.edu</td>
+<td>@quinn_maness (Instagram)</td>
 </tr>
 <tr>
 <td>Member 4</td>
