--- a/Appendix/App-Team-Org/index.html
+++ b/Appendix/App-Team-Org/index.html
@@ -994,19 +994,19 @@
 <td>@quinn_maness (Instagram)</td>
 </tr>
 <tr>
-<td>Member 4</td>
-<td>?</td>
-<td>?</td>
-<td>?</td>
+<td>Aaron Kiem</td>
+<td>4808828753</td>
+<td>akiem@asu.edu</td>
+<td>@aaron24690 (Instagram)</td>
 </tr>
 </tbody>
 </table>
 <h3 id="main-method-for-group-communication">Main Method for Group Communication</h3>
-<p>Based on the information provided on in the "Team Member Communication Modes," the group primary method of communication is ......</p>
+<p>Based on the information provided on in the "Team Member Communication Modes," the group primary method of communication is text messages, email, and Instagram.</p>
 <h2 id="communication-procedures">Communication Procedures</h2>
 <ol>
-<li>How will your team communicate?</li>
-<li>How will you handle instructor correspondence? Who is responsible? How will that be communicated with/back to the group?</li>
+<li>Text Message (Primary Communication Source)</li>
+<li>Caleb is responsible for submission and organization of every assignment. Each team member will discuss assigning roles of responsiblity for carryout each assignment and will be communicated through either text message or in-person meet ups.</li>
 </ol>
 <h2 id="meeting-schedule">Meeting Schedule</h2>
 <p><em><strong>Appendix Table 2</strong>: Weekly Schedule</em></p>
@@ -1028,79 +1028,79 @@
 <td style="text-align: center;">8:00 AM</td>
 <td style="text-align: center;">-</td>
 <td style="text-align: center;">-</td>
-<td style="text-align: center;">M</td>
 <td style="text-align: center;">-</td>
-<td style="text-align: center;">M</td>
+<td style="text-align: center;">-</td>
+<td style="text-align: center;">-</td>
 <td style="text-align: center;">-</td>
 <td style="text-align: center;">-</td>
 </tr>
 <tr>
 <td style="text-align: center;">9:00 AM</td>
 <td style="text-align: center;">-</td>
-<td style="text-align: center;">F</td>
-<td style="text-align: center;">M</td>
 <td style="text-align: center;">-</td>
-<td style="text-align: center;">M</td>
+<td style="text-align: center;">-</td>
+<td style="text-align: center;">-</td>
+<td style="text-align: center;">-</td>
 <td style="text-align: center;">-</td>
 <td style="text-align: center;">-</td>
 </tr>
 <tr>
 <td style="text-align: center;">10:00 AM</td>
 <td style="text-align: center;">-</td>
-<td style="text-align: center;">B</td>
-<td style="text-align: center;">M</td>
 <td style="text-align: center;">-</td>
-<td style="text-align: center;">M</td>
+<td style="text-align: center;">-</td>
+<td style="text-align: center;">-</td>
+<td style="text-align: center;">-</td>
 <td style="text-align: center;">-</td>
 <td style="text-align: center;">-</td>
 </tr>
 <tr>
 <td style="text-align: center;">11:00 AM</td>
 <td style="text-align: center;">-</td>
-<td style="text-align: center;">B</td>
-<td style="text-align: center;">M</td>
 <td style="text-align: center;">-</td>
-<td style="text-align: center;">M</td>
+<td style="text-align: center;">-</td>
+<td style="text-align: center;">-</td>
+<td style="text-align: center;">-</td>
 <td style="text-align: center;">-</td>
 <td style="text-align: center;">-</td>
 </tr>
 <tr>
 <td style="text-align: center;">12:00 PM</td>
-<td style="text-align: center;">Z</td>
-<td style="text-align: center;">B, Z</td>
-<td style="text-align: center;">M</td>
 <td style="text-align: center;">-</td>
-<td style="text-align: center;">M</td>
+<td style="text-align: center;">-</td>
+<td style="text-align: center;">-</td>
+<td style="text-align: center;">-</td>
+<td style="text-align: center;">-</td>
 <td style="text-align: center;">-</td>
 <td style="text-align: center;">-</td>
 </tr>
 <tr>
 <td style="text-align: center;">1:00 PM</td>
-<td style="text-align: center;">Z, F</td>
-<td style="text-align: center;"></td>
-<td style="text-align: center;">M</td>
 <td style="text-align: center;">-</td>
-<td style="text-align: center;">M</td>
+<td style="text-align: center;">-</td>
+<td style="text-align: center;">-</td>
+<td style="text-align: center;">-</td>
+<td style="text-align: center;">-</td>
 <td style="text-align: center;">-</td>
 <td style="text-align: center;">-</td>
 </tr>
 <tr>
 <td style="text-align: center;">2:00 PM</td>
-<td style="text-align: center;">Z, F</td>
 <td style="text-align: center;">-</td>
-<td style="text-align: center;">M</td>
 <td style="text-align: center;">-</td>
-<td style="text-align: center;">M</td>
+<td style="text-align: center;">-</td>
+<td style="text-align: center;">-</td>
+<td style="text-align: center;">C,R,Q,A</td>
 <td style="text-align: center;">-</td>
 <td style="text-align: center;">-</td>
 </tr>
 <tr>
 <td style="text-align: center;">3:00 PM</td>
-<td style="text-align: center;">Z</td>
 <td style="text-align: center;">-</td>
-<td style="text-align: center;">M</td>
 <td style="text-align: center;">-</td>
-<td style="text-align: center;">M</td>
+<td style="text-align: center;">-</td>
+<td style="text-align: center;">-</td>
+<td style="text-align: center;">-</td>
 <td style="text-align: center;">-</td>
 <td style="text-align: center;">-</td>
 </tr>
@@ -1108,9 +1108,9 @@
 <td style="text-align: center;">4:00 PM</td>
 <td style="text-align: center;">-</td>
 <td style="text-align: center;">-</td>
-<td style="text-align: center;">M</td>
 <td style="text-align: center;">-</td>
-<td style="text-align: center;">M</td>
+<td style="text-align: center;">-</td>
+<td style="text-align: center;">-</td>
 <td style="text-align: center;">-</td>
 <td style="text-align: center;">-</td>
 </tr>
@@ -1118,9 +1118,9 @@
 <td style="text-align: center;">5:00 PM</td>
 <td style="text-align: center;">-</td>
 <td style="text-align: center;">-</td>
-<td style="text-align: center;">M</td>
 <td style="text-align: center;">-</td>
-<td style="text-align: center;">M</td>
+<td style="text-align: center;">-</td>
+<td style="text-align: center;">-</td>
 <td style="text-align: center;">-</td>
 <td style="text-align: center;">-</td>
 </tr>
@@ -1128,9 +1128,9 @@
 <td style="text-align: center;">6:00 PM</td>
 <td style="text-align: center;">-</td>
 <td style="text-align: center;">-</td>
-<td style="text-align: center;">M</td>
-<td style="text-align: center;">-</td>
-<td style="text-align: center;">M</td>
+<td style="text-align: center;">C,R,Q,A</td>
+<td style="text-align: center;">C,R,Q,A</td>
+<td style="text-align: center;">C,R,Q,A</td>
 <td style="text-align: center;">-</td>
 <td style="text-align: center;">-</td>
 </tr>
@@ -1138,9 +1138,9 @@
 <td style="text-align: center;">7:00 PM</td>
 <td style="text-align: center;">-</td>
 <td style="text-align: center;">-</td>
-<td style="text-align: center;">M</td>
-<td style="text-align: center;">-</td>
-<td style="text-align: center;">M</td>
+<td style="text-align: center;">C,R,Q,A</td>
+<td style="text-align: center;">C,R,Q,A</td>
+<td style="text-align: center;">C,R,Q,A</td>
 <td style="text-align: center;">-</td>
 <td style="text-align: center;">-</td>
 </tr>
@@ -1148,9 +1148,9 @@
 <td style="text-align: center;">8:00 PM</td>
 <td style="text-align: center;">-</td>
 <td style="text-align: center;">-</td>
-<td style="text-align: center;">M</td>
-<td style="text-align: center;">-</td>
-<td style="text-align: center;">M</td>
+<td style="text-align: center;">C,R,Q,A</td>
+<td style="text-align: center;">C,R,Q,A</td>
+<td style="text-align: center;">C,R,Q,A</td>
 <td style="text-align: center;">-</td>
 <td style="text-align: center;">-</td>
 </tr>
@@ -1158,9 +1158,9 @@
 <td style="text-align: center;">9:00 PM</td>
 <td style="text-align: center;">-</td>
 <td style="text-align: center;">-</td>
-<td style="text-align: center;">M</td>
-<td style="text-align: center;">-</td>
-<td style="text-align: center;">M</td>
+<td style="text-align: center;">C,R,Q,A</td>
+<td style="text-align: center;">C,R,Q,A</td>
+<td style="text-align: center;">C,R,Q,A</td>
 <td style="text-align: center;">-</td>
 <td style="text-align: center;">-</td>
 </tr>
@@ -1176,20 +1176,20 @@
 </thead>
 <tbody>
 <tr>
-<td>Bill</td>
-<td style="text-align: center;">B</td>
+<td>Caleb Yuen</td>
+<td style="text-align: center;">C</td>
 </tr>
 <tr>
-<td>Mary</td>
-<td style="text-align: center;">M</td>
+<td>Roshan Roy</td>
+<td style="text-align: center;">R</td>
 </tr>
 <tr>
-<td>Zane</td>
-<td style="text-align: center;">Z</td>
+<td>Quinn Maness</td>
+<td style="text-align: center;">Q</td>
 </tr>
 <tr>
-<td>Felicity</td>
-<td style="text-align: center;">F</td>
+<td>Aaron Kiem</td>
+<td style="text-align: center;">A</td>
 </tr>
 </tbody>
 </table>
