deploy: 1b799c0f80f66a6252b1a13cb33ff06a67a8c4b7

--- a/Appendix/App-Team-Org/index.html
+++ b/Appendix/App-Team-Org/index.html
@@ -1006,7 +1006,8 @@
 <h2 id="communication-procedures">Communication Procedures</h2>
 <ol>
 <li>Text Message (Primary Communication Source)</li>
-<li>Caleb is responsible for submission and organization of every assignment. Each team member will discuss assigning roles of responsiblity for carryout each assignment and will be communicated through either text message or in-person meet ups.</li>
+<li>Caleb is responsible for submission and organization of every assignment. Each team member will discuss assigning roles of responsiblity for carryout each assignment.</li>
+<li>Schdule updates will be communicated through either text message or in-person meet ups.</li>
 </ol>
 <h2 id="meeting-schedule">Meeting Schedule</h2>
 <p><em><strong>Appendix Table 2</strong>: Weekly Schedule</em></p>
@@ -1180,7 +1181,7 @@
 <td style="text-align: center;">C</td>
 </tr>
 <tr>
-<td>Roshan Roy</td>
+<td>Roshan Roy Geoffrey Joe</td>
 <td style="text-align: center;">R</td>
 </tr>
 <tr>
