--- a/Appendix/App-Team-Org/index.html
+++ b/Appendix/App-Team-Org/index.html
@@ -1262,7 +1262,7 @@
 <h2 id="conflict-recognition-resolution">Conflict Recognition &amp; Resolution</h2>
 <p>To being, we are all adults and capable of resolving the conflict within ourselves before external influence in the form of professors or teaching assistants is required. For any conflict, there will be a group vote. If, and only if, the group vote is tied, will we ask others for assistance. If a person's opinion is diminished because of the group vote, we will try to intersect the group and the person's opinions, but we will have to move forward with the overall interests of the group.</p>
 <h2 id="signatures">Signatures</h2>
-<p>Need to add content!!</p>
+<p>Caleb Yuen</p>
 
 
 
