--- a/02-Team-Organization/index.html
+++ b/02-Team-Organization/index.html
@@ -709,10 +709,7 @@
 <p>"ASU is a comprehensive public research university, measured not by whom it excludes, but by whom it includes and how they succeed; advancing research and discovery of public value; and assuming fundamental responsibility for the economic, social, cultural and overall health of the communities it serves." (ASU's Charter)</p>
 </blockquote>
 <h2 id="product-mission-statement">Product Mission Statement</h2>
-<p>Describe the distilled purpose, function, or reason for your product to exist. From this form a team mission statement. Google's mission statement is:</p>
-<blockquote>
-<p>"Google's mission is to organize the world's information and make it universally accessible and useful."</p>
-</blockquote>
+<p>Our mission is to design and deliver a reliable embedded system that consistently demonstrates satisfactory performance under real-world conditions. We aim to achieve this through clear and proactive communication, and leveraging each team member’s strengths to balance responsibilities. By producing professional, industry-standard documentation and well-structured code, we ensure the system’s long-term maintainability and usability. Above all, we are committed to creating a collaborative and respectful team culture where every member is eexpected to contribute, ensuring that the product embodies both technical excellence and the vision of our team.</p>
 
 
 
