deploy: 8365716306d96608345bd358e267c539148ad75a

--- a/Appendix/App-Team-Org/index.html
+++ b/Appendix/App-Team-Org/index.html
@@ -1234,7 +1234,7 @@
 <td style="text-align: left;">Coordinates the team's work on a given assignment to Canvas before the due date</td>
 </tr>
 <tr>
-<td style="text-align: left;">Project monitor</td>
+<td style="text-align: left;">Project monitor (Roshan Roy Geoffrey Joe)</td>
 <td style="text-align: left;">Tracks the team's progress relative to the project schedule (Gantt chart) and keeps team members apprised of deadlines and project status</td>
 </tr>
 </tbody>
@@ -1242,7 +1242,8 @@
 <h2 id="conflict-recognition-resolution">Conflict Recognition &amp; Resolution</h2>
 <p>To begin, we are all adults and capable of resolving the conflict within ourselves before external influence in the form of professors or teaching assistants is required. For any conflict, there will be a group vote. If, and only if, the group vote is tied, will we ask others for assistance. If a person's opinion is diminished because of the group vote, we will try to intersect the group and the person's opinions, but we will have to move forward with the overall interests of the group.</p>
 <h2 id="signatures">Signatures</h2>
-<p>Caleb Yuen</p>
+<p>Caleb Yuen
+Roshan Roy Geoffrey Joe</p>
 
 
 
