deploy: 625668e8d84b43d1173fb303e54329ed00bfb412

--- a/Appendix/App-Team-Org/index.html
+++ b/Appendix/App-Team-Org/index.html
@@ -1222,11 +1222,11 @@
 </thead>
 <tbody>
 <tr>
-<td style="text-align: left;">Meeting leader</td>
+<td style="text-align: left;">Meeting leader (Quinn Maness)</td>
 <td style="text-align: left;">Schedules team meetings, creates and distributes an agenda for each meeting, and runs each meeting</td>
 </tr>
 <tr>
-<td style="text-align: left;">Meeting recorder</td>
+<td style="text-align: left;">Meeting recorder (Aaron Kiem)</td>
 <td style="text-align: left;">Takes minutes of each team meeting, including attendance, and records action items and to whom they are assigned</td>
 </tr>
 <tr>
@@ -1242,8 +1242,10 @@
 <h2 id="conflict-recognition-resolution">Conflict Recognition &amp; Resolution</h2>
 <p>To begin, we are all adults and capable of resolving the conflict within ourselves before external influence in the form of professors or teaching assistants is required. For any conflict, there will be a group vote. If, and only if, the group vote is tied, will we ask others for assistance. If a person's opinion is diminished because of the group vote, we will try to intersect the group and the person's opinions, but we will have to move forward with the overall interests of the group.</p>
 <h2 id="signatures">Signatures</h2>
-<p>Caleb Yuen
-Roshan Roy Geoffrey Joe</p>
+<p>Caleb Yuen</p>
+<p>Roshan Roy Geoffrey Joe</p>
+<p>Aaron Kiem</p>
+<p>Quinn Maness</p>
 
 
 
