--- a/Appendix/App-Team-Org/index.html
+++ b/Appendix/App-Team-Org/index.html
@@ -1063,7 +1063,7 @@
 <td style="text-align: center;">-</td>
 <td style="text-align: center;">-</td>
 <td style="text-align: center;">-</td>
-<td style="text-align: center;">-</td>
+<td style="text-align: center;">C,R,Q,A</td>
 </tr>
 <tr>
 <td style="text-align: center;">12:00 PM</td>
@@ -1073,7 +1073,7 @@
 <td style="text-align: center;">-</td>
 <td style="text-align: center;">-</td>
 <td style="text-align: center;">-</td>
-<td style="text-align: center;">-</td>
+<td style="text-align: center;">C,R,Q,A</td>
 </tr>
 <tr>
 <td style="text-align: center;">1:00 PM</td>
@@ -1083,17 +1083,17 @@
 <td style="text-align: center;">-</td>
 <td style="text-align: center;">-</td>
 <td style="text-align: center;">-</td>
-<td style="text-align: center;">-</td>
+<td style="text-align: center;">C,R,Q,A</td>
 </tr>
 <tr>
 <td style="text-align: center;">2:00 PM</td>
 <td style="text-align: center;">-</td>
 <td style="text-align: center;">-</td>
-<td style="text-align: center;">-</td>
+<td style="text-align: center;">C,R,Q,A</td>
 <td style="text-align: center;">-</td>
 <td style="text-align: center;">C,R,Q,A</td>
 <td style="text-align: center;">-</td>
-<td style="text-align: center;">-</td>
+<td style="text-align: center;">C,R,Q,A</td>
 </tr>
 <tr>
 <td style="text-align: center;">3:00 PM</td>
@@ -1103,7 +1103,7 @@
 <td style="text-align: center;">-</td>
 <td style="text-align: center;">-</td>
 <td style="text-align: center;">-</td>
-<td style="text-align: center;">-</td>
+<td style="text-align: center;">C,R,Q,A</td>
 </tr>
 <tr>
 <td style="text-align: center;">4:00 PM</td>
@@ -1113,7 +1113,7 @@
 <td style="text-align: center;">-</td>
 <td style="text-align: center;">-</td>
 <td style="text-align: center;">-</td>
-<td style="text-align: center;">-</td>
+<td style="text-align: center;">C,R,Q,A</td>
 </tr>
 <tr>
 <td style="text-align: center;">5:00 PM</td>
@@ -1123,51 +1123,60 @@
 <td style="text-align: center;">-</td>
 <td style="text-align: center;">-</td>
 <td style="text-align: center;">-</td>
-<td style="text-align: center;">-</td>
+<td style="text-align: center;">C,R,Q,A</td>
 </tr>
 <tr>
 <td style="text-align: center;">6:00 PM</td>
-<td style="text-align: center;">-</td>
-<td style="text-align: center;">-</td>
 <td style="text-align: center;">C,R,Q,A</td>
 <td style="text-align: center;">C,R,Q,A</td>
 <td style="text-align: center;">C,R,Q,A</td>
+<td style="text-align: center;">C,R,Q,A</td>
+<td style="text-align: center;">C,R,Q,A</td>
 <td style="text-align: center;">-</td>
-<td style="text-align: center;">-</td>
+<td style="text-align: center;">C,R,Q,A</td>
 </tr>
 <tr>
 <td style="text-align: center;">7:00 PM</td>
-<td style="text-align: center;">-</td>
-<td style="text-align: center;">-</td>
 <td style="text-align: center;">C,R,Q,A</td>
 <td style="text-align: center;">C,R,Q,A</td>
 <td style="text-align: center;">C,R,Q,A</td>
+<td style="text-align: center;">C,R,Q,A</td>
+<td style="text-align: center;">C,R,Q,A</td>
 <td style="text-align: center;">-</td>
-<td style="text-align: center;">-</td>
+<td style="text-align: center;">C,R,Q,A</td>
 </tr>
 <tr>
 <td style="text-align: center;">8:00 PM</td>
-<td style="text-align: center;">-</td>
-<td style="text-align: center;">-</td>
 <td style="text-align: center;">C,R,Q,A</td>
 <td style="text-align: center;">C,R,Q,A</td>
 <td style="text-align: center;">C,R,Q,A</td>
+<td style="text-align: center;">C,R,Q,A</td>
+<td style="text-align: center;">C,R,Q,A</td>
 <td style="text-align: center;">-</td>
-<td style="text-align: center;">-</td>
+<td style="text-align: center;">C,R,Q,A</td>
 </tr>
 <tr>
 <td style="text-align: center;">9:00 PM</td>
-<td style="text-align: center;">-</td>
-<td style="text-align: center;">-</td>
 <td style="text-align: center;">C,R,Q,A</td>
 <td style="text-align: center;">C,R,Q,A</td>
 <td style="text-align: center;">C,R,Q,A</td>
+<td style="text-align: center;">C,R,Q,A</td>
+<td style="text-align: center;">C,R,Q,A</td>
 <td style="text-align: center;">-</td>
-<td style="text-align: center;">-</td>
+<td style="text-align: center;">C,R,Q,A</td>
+</tr>
+<tr>
+<td style="text-align: center;"><em><strong>Table Legend for Appendix Table 2</strong></em></td>
+<td style="text-align: center;"></td>
+<td style="text-align: center;"></td>
+<td style="text-align: center;"></td>
+<td style="text-align: center;"></td>
+<td style="text-align: center;"></td>
+<td style="text-align: center;"></td>
+<td style="text-align: center;"></td>
 </tr>
 </tbody>
 </table>
-<p><em><strong>Table Legend for Appendix Table 2</strong></em></p>
 <table>
 <thead>
 <tr>
