--- a/Appendix/App-Team-Org/index.html
+++ b/Appendix/App-Team-Org/index.html
@@ -1006,7 +1006,8 @@
 <h2 id="communication-procedures">Communication Procedures</h2>
 <ol>
 <li>Text Message (Primary Communication Source)</li>
-<li>Caleb is responsible for submission and organization of every assignment. Each team member will discuss assigning roles of responsiblity for carryout each assignment.</li>
+<li>Caleb is responsible for submission and organization of every assignment.</li>
+<li>Each team member will discuss assigning areas of responsiblity for carryout each assignment.</li>
 <li>Schdule updates will be communicated through either text message or in-person meet ups.</li>
 </ol>
 <h2 id="meeting-schedule">Meeting Schedule</h2>
