deploy: e9639c9c86e45bd36d91397029fc3242ba0c1016

--- a/Appendix/App-Team-Org/index.html
+++ b/Appendix/App-Team-Org/index.html
@@ -1006,7 +1006,7 @@
 <h2 id="communication-procedures">Communication Procedures</h2>
 <ol>
 <li>Text Message (Primary Communication Source)</li>
-<li>Caleb is responsible for submission and organization of every assignment, adn will follow with team members before submission.</li>
+<li>Caleb is responsible for submission and organization of every assignment and will follow with team members before submission.</li>
 <li>Each team member will discuss assigning areas of responsiblity for carryout each assignment.</li>
 <li>Schdule updates will be communicated through either text message or in-person meet ups.</li>
 </ol>
