deploy: e50dc29586d7ff1450ece3484415a1783031146c

--- a/Appendix/App-Team-Org/index.html
+++ b/Appendix/App-Team-Org/index.html
@@ -1006,9 +1006,9 @@
 <h2 id="communication-procedures">Communication Procedures</h2>
 <ol>
 <li>Text Message (Primary Communication Source)</li>
-<li>Caleb is responsible for submission and organization of every assignment and will follow with team members before submission.</li>
+<li>Caleb is responsible for submission and organization of every assignment, and will follow with team members before submission.</li>
 <li>Each team member will discuss assigning areas of responsiblity for carryout each assignment.</li>
-<li>Schdule updates will be communicated through either text message or in-person meet ups.</li>
+<li>Schedule updates will be communicated through either text message or in-person meet ups.</li>
 </ol>
 <h2 id="meeting-schedule">Meeting Schedule</h2>
 <p><em><strong>Appendix Table 2</strong>: Weekly Schedule</em></p>
@@ -1166,18 +1166,9 @@
 <td style="text-align: center;">-</td>
 <td style="text-align: center;">C,R,Q,A</td>
 </tr>
-<tr>
-<td style="text-align: center;"><em><strong>Table Legend for Appendix Table 2</strong></em></td>
-<td style="text-align: center;"></td>
-<td style="text-align: center;"></td>
-<td style="text-align: center;"></td>
-<td style="text-align: center;"></td>
-<td style="text-align: center;"></td>
-<td style="text-align: center;"></td>
-<td style="text-align: center;"></td>
-</tr>
 </tbody>
 </table>
+<p><em><strong>Table Legend for Appendix Table 2</strong></em></p>
 <table>
 <thead>
 <tr>
