--- a/Appendix/App-Team-Org/index.html
+++ b/Appendix/App-Team-Org/index.html
@@ -1207,11 +1207,11 @@
 <ol>
 <li>What's the preferred format for meetings (face-to-face or virtually)?</li>
 </ol>
-<p>Face-to-face is definitely preferrable and easily available with our schedules, but if needed we can always do a group call, zoom, discord, etc.</p>
+<p>Face-to-face is definitely preferrable and easily available with our schedules--but if needed we can always do a group call, zoom, discord, etc.</p>
 <ol>
 <li>Are there any other procedures that your team feels are necessary?</li>
 </ol>
-<p>Good communication is going to always be the key to a team where everyone feels heard, so prioritizing good scheduling as far as meeting location, time, etc. is essential.</p>
+<p>Good communication is going to always be the key to a team where everyone feels heard. Prioritizing good scheduling as far as meeting location, time, etc. is essential.</p>
 <h2 id="roles-responsibilities">Roles &amp; Responsibilities</h2>
 <p><em><strong>Appendix Table 2</strong>: Project Roles and Duties</em></p>
 <table>
