deploy: c4a7f0b40a241fa693e60350b22079972c4af926

--- a/Appendix/App-Team-Org/index.html
+++ b/Appendix/App-Team-Org/index.html
@@ -1199,10 +1199,8 @@
 <ol>
 <li>What method will you use to remind yourselves of meetings (a shared calendar?) </li>
 </ol>
-<p>We will utilize the ASU canvas announcements in our group section in order to keep meeting reminders within canvas. We will also make sure to communicate via text, as well via email or instagram.</p>
-<ol>
-<li>How will your team go about changing or adding meeting times?</li>
-</ol>
+<p>We will utilize the ASU canvas announcements in our group section in order to keep meeting reminders within canvas. We will also make sure to communicate via text, as well via email or instagram.
+2. How will your team go about changing or adding meeting times?</p>
 <p>Communication is key, so we'll always let the whole team know beforehand via an afformentioned method.</p>
 <ol>
 <li>What's the preferred format for meetings (face-to-face or virtually)?</li>
