--- a/Appendix/App-Team-Org/index.html
+++ b/Appendix/App-Team-Org/index.html
@@ -1199,17 +1199,19 @@
 <ol>
 <li>What method will you use to remind yourselves of meetings (a shared calendar?) </li>
 </ol>
-<p>We will utilize the ASU canvas announcements in our group section in order to keep meeting reminders within canvas. We will also make sure to communicate via text, as well via email or instagram.
-2. How will your team go about changing or adding meeting times?</p>
+<p>We will utilize the ASU canvas announcements in our group section in order to keep meeting reminders within canvas. We will also make sure to communicate via text, as well via email or instagram.</p>
+<ol>
+<li>How will your team go about changing or adding meeting times?</li>
+</ol>
 <p>Communication is key, so we'll always let the whole team know beforehand via an afformentioned method.</p>
 <ol>
 <li>What's the preferred format for meetings (face-to-face or virtually)?</li>
 </ol>
-<p>Face-to-face is definitely preferrable and easily available with our schedules--but if needed we can always do a group call, zoom, discord, etc.</p>
+<p>Face-to-face is definitely preferrable and easily available with our schedules; but if needed we can always do a group call, zoom, discord, etc.</p>
 <ol>
 <li>Are there any other procedures that your team feels are necessary?</li>
 </ol>
-<p>Good communication is going to always be the key to a team where everyone feels heard. Prioritizing good scheduling as far as meeting location, time, etc. is essential.</p>
+<p>Good communication is going to always be the key to a team where everyone feels heard--pioritizing good scheduling as far as meeting location, time, etc. is essential.</p>
 <h2 id="roles-responsibilities">Roles &amp; Responsibilities</h2>
 <p><em><strong>Appendix Table 2</strong>: Project Roles and Duties</em></p>
 <table>
