deploy: 5e3ab0d60b5e102418eb977fc8db8f1ab3b16c32

--- a/03-User-Needs-and Benchmarking/index.html
+++ b/03-User-Needs-and Benchmarking/index.html
@@ -646,7 +646,7 @@
 <h2 id="-_4">-</h2>
 <h2 id="-_5">-</h2>
 <h2 id="product-analyses">Product Analyses</h2>
-<h3 id="1clap-light-amazon">1)Clap Light — Amazon</h3>
+<h3 id="1-clap-light-amazon">1) Clap Light — Amazon</h3>
 <p><strong>Search keywords:</strong> <code>clap light smart lamp sound activated</code><br>
 <strong>Search link:</strong> <a href="https://www.amazon.com/Control-Bedroom-Activated-Solution-Detection/dp/B0CVVBYG4R/ref=sr_1_6?crid=3U1FMD7JVC7DW&amp;dib=eyJ2IjoiMSJ9._tiqYg3j_PzFXnsdOnInFSkSRUS4rIO4ReeaU83PIvaCrzgJVULjJPAvigGHsL-XTR9qmRnjhaBsgdAl1ooTs8RQjZk_rSXzgWxmFJTAe9U3SmzcgOGVhxS0H7UfxAYzOM-j4xaYqC7cjOhI6xYYVZnXAf3kt31BZWAIl7r7s5Jmuio2JrmClKYbuv7WOXebE0Um1cxHQ2xX7z87t03HqwHpt6J0pFR0S1Sp99vNW7RkxunCeSY4Kmgwm2LzGB2gn2AOu7rqp7WSu_jbnMtImyWN_tBk_vu3joxxH7TjInU.CPaKihUm8y6R5_3XGf91pkNGACZSkA0U7NQJxZj5PYg&amp;dib_tag=se&amp;keywords=clap+light&amp;qid=1757792515&amp;sprefix=clap+light%2Caps%2C241&amp;sr=8-6">Amazon - Clap Light</a></p>
 <p><strong>Voice of the Customer → User Needs</strong></p>
