deploy: 872dd3bbf28bff68cbe75435e4d2f807d0aa57fe

--- a/03-User-Needs-and Benchmarking/index.html
+++ b/03-User-Needs-and Benchmarking/index.html
@@ -972,32 +972,32 @@
 <tbody>
 <tr>
 <td>“Very easy to install and works flawlessly. Easy to program down motion if needed.”</td>
-<td>The product should allow <strong>simple, user-friendly installation and programming</strong>.</td>
+<td>The product should allow simple, user-friendly installation and programming.</td>
 <td>Latent</td>
 </tr>
 <tr>
 <td>“Love the blind. Works well. It is too long for most windows… I control it for the evening while I set up a timer for the morning.”</td>
-<td>The product should <strong>adapt to different window sizes</strong> and <strong>allow scheduled automation</strong>.</td>
+<td>The product should adapt to different window sizes and allow scheduled automation.</td>
 <td>Latent</td>
 </tr>
 <tr>
 <td>“Easy install. No drill required unless you want to secure it more. Quiet motorized shade… Comes with extra spacers for adjusting.”</td>
-<td>The product should be <strong>quiet, adjustable, and powered conveniently</strong>.</td>
+<td>The product should be quiet, adjustable, and powered conveniently.</td>
 <td>Latent</td>
 </tr>
 <tr>
 <td>“Like the product but 2 of my 3 shades have pin holes… noticeable on blackout shades.”</td>
-<td>The product should maintain <strong>consistent build quality with no light leakage</strong>.</td>
+<td>The product should maintain consistent build quality with no light leakage.</td>
 <td>Latent</td>
 </tr>
 <tr>
 <td>“Bought these because Alexa said they could open/close on a schedule… not the case. No option in the app.”</td>
-<td>The product should <strong>support scheduling directly through the app without extra hardware</strong>.</td>
+<td>The product should support scheduling directly through the app without extra hardware.</td>
 <td>Latent</td>
 </tr>
 <tr>
 <td>“Comes with regular battery drain issue. Motor sound bit loud then other times.”</td>
-<td>The product should have <strong>long-lasting battery life</strong> and <strong>consistent, quiet operation</strong>.</td>
+<td>The product should have long-lasting battery life and **consistent, quiet operation.</td>
 <td>Latent</td>
 </tr>
 </tbody>
