--- a/03-User-Needs-and Benchmarking/index.html
+++ b/03-User-Needs-and Benchmarking/index.html
@@ -907,7 +907,7 @@
 <li><a href="https://www.amazon.com/MANSNIX-Motorized-Blackout-Automatic-Compatible/dp/B0B5X1DHWZ/">Smart Blinds</a></li>
 <li><a href="https://www.amazon.com/Mapping-Robotic-Navigation-Obstacle-Avoidance/dp/B0FGXQPQ8G">Robot Vacuum &amp; Mop</a></li>
 <li><a href="https://www.bestbuy.com/product/ring-battery-doorbell-plus-smart-wifi-video-doorbell-battery-operated-with-head-to-toe-view-satin-nickel/J39HW6P9S2/sku/6531758?extStoreId=1189">Wifi Doorbell</a></li>
-<li><a href="https://www.walmart.com/ip/Google-Nest-Thermostat-Programmable-Smart-Thermostat-for-Home-Snow/415911305?wmlspartner=wlpa&amp;selectedSellerId=102477550">Google Nest Thermostat</a></li>
+<li><a href="https://www.walmart.com/ip/Google-Nest-Thermostat-Programmable-Smart-Thermostat-for-Home-Snow/415911305?wmlspartner=wlpa&amp;selectedSellerId=102477550">Smart Thermostat</a></li>
 </ul>
 <h2 id="product-analyses">Product Analyses</h2>
 <h3 id="1-clap-light-amazon">1) Clap Light — Amazon</h3>
