deploy: d9be5c96e990c99bc51685ab15f11208695cb5bd

--- a/03-User-Needs-and Benchmarking/index.html
+++ b/03-User-Needs-and Benchmarking/index.html
@@ -1064,72 +1064,17 @@
 <p><strong>Search keywords:</strong> <code>camera door doorbell smart household wifi</code><br>
 <strong>Search link:</strong> <a href="https://www.bestbuy.com/product/ring-battery-doorbell-plus-smart-wifi-video-doorbell-battery-operated-with-head-to-toe-view-satin-nickel/J39HW6P9S2/sku/6531758?extStoreId=1189">Best Buy - Ring Wifi Doorbell</a></p>
 <p><strong>Voice of the Customer → User Needs</strong></p>
-<table>
-<thead>
-<tr>
-<th>Statements (summarized quotes)</th>
-<th>User Need Statement</th>
-<th>Explicit/Latent</th>
-<th>Meta Need</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>“Crystal-clear video, and the ‘head-to-toe’ view shows faces and packages; night vision works great.”</td>
-<td>The product delivers high-quality HD+ (1536p) video with a tall field of view and clear night vision.</td>
-<td>Explicit</td>
-<td>Video Quality &amp; Coverage</td>
-</tr>
-<tr>
-<td>“Motion alerts are customizable and super responsive; ‘person detected’ notifications helped me intervene.”</td>
-<td>The product provides reliable, customizable motion detection that promptly alerts the user.</td>
-<td>Explicit</td>
-<td>Reliability</td>
-</tr>
-<tr>
-<td>“Two-way audio is crisp—people can hear me even from a distance.”</td>
-<td>The product enables clear two-way communication with visitors.</td>
-<td>Explicit</td>
-<td>Communication</td>
-</tr>
-<tr>
-<td>“Battery lasts weeks; for us it goes about a month between charges depending on foot traffic.”</td>
-<td>The product should offer long battery life under real-world usage.</td>
-<td>Explicit</td>
-<td>Power</td>
-</tr>
-<tr>
-<td>“Installation was easy; the app is intuitive; I even hooked it to my existing doorbell wires/chime.”</td>
-<td>The product must be simple to install and easy to control via an app.</td>
-<td>Explicit</td>
-<td>Ease of Use</td>
-</tr>
-<tr>
-<td>“Works with Alexa—view on Echo Show and get announcements.”</td>
-<td>The product should integrate smoothly with the Alexa ecosystem for viewing and voice prompts.</td>
-<td>Explicit</td>
-<td>Smart Home Integration</td>
-</tr>
-<tr>
-<td>“After the 30-day trial you need a paid plan to keep using cloud recordings; package alerts are part of the subscription.”</td>
-<td>The product should be transparent about ongoing costs; essential features (recording/package alerts) often require a subscription.</td>
-<td>Explicit</td>
-<td>Ownership Cost Transparency</td>
-</tr>
-<tr>
-<td>“First charge took a while; having a spare quick-release battery is very handy.”</td>
-<td>Faster charging or an easy spare-battery workflow reduces downtime.</td>
-<td>Latent</td>
-<td>Power Convenience</td>
-</tr>
-<tr>
-<td>“Not compatible with my older doorbell bracket.”</td>
-<td>The product should maintain or clearly communicate mount compatibility or include adapters.</td>
-<td>Explicit</td>
-<td>Compatibility</td>
-</tr>
-</tbody>
-</table>
+<p>| Statements (summarized quotes) | User Need Statement | Explicit/Latent | Meta Need |
+| “Eco Temps kick in when I’m away and my bill dropped.” | 1) Automatically reduce energy use when home is unoccupied; 2) Make Eco settings easy to enable and trust. | Explicit (positive) | Energy Savings |
+| “I can change the temp and edit schedules in the Google Home app from anywhere.” | 1) Reliable remote control; 2) Fast, tweakable scheduling in one place. | Explicit (positive) | Ease of Use |
+| “Voice control works—‘Hey Google, set it to 72.’” | 1) Hands-free temperature changes via voice; 2) Consistent assistant responses without lag. | Explicit (positive) | Smart-Home Integration |
+| “It warned me when something looked off with my HVAC and reminded me about filters.” | 1) Proactive system monitoring with timely alerts; 2) Adjustable maintenance reminders. | Explicit (positive) | Reliability &amp; Maintenance |
+| “Looks clean; the Snow finish blends in and the display is easy to read.” | 1) Minimal, modern design that fits decor; 2) Readable screen from typical viewing distance. | Explicit (positive) | Aesthetics |
+| “ENERGY STAR certified—nice to know it’s efficient.” | 1) Verified efficiency to reduce waste; 2) Clear guidance on energy programs/rebates where available. | Explicit (positive) | Energy Efficiency |
+| “My setup needed a C-wire/Power Connector—battery kept dipping without it.” | 1) Clear guidance on when extra power is required; 2) Stable power across diverse HVAC systems. | Explicit (negative) | Compatibility &amp; Power |
+| “Not compatible with high-voltage (line-voltage) systems in older homes.” | 1) Transparent compatibility limits up front; 2) Suggested alternatives or adapters when unsupported. | Explicit (negative) | System Compatibility |
+| “You need a Google account and working Wi-Fi for the smart stuff.” | 1) Transparent prerequisites (account/Wi-Fi) before purchase; 2) Reliable connectivity once set up. | Explicit (negative) | Onboarding &amp; Connectivity |
+| “It uses AAA batteries, so I’ll have to replace them occasionally.” | 1) Reasonable battery life with clear low-battery alerts; 2) Simple, tool-free battery replacement. | Explicit (negative) | Power Convenience |</p>
 <p><strong>Category / Meta-Needs:</strong><br>
 - <strong>Home Monitoring and Security</strong> — <em>See/communicate with visitors, receive dependable alerts, capture package deliveries.</em>
 - <strong>Ease of Use and Power</strong> — <em>Simple setup with strong battery performance in real world conditions.</em></p>
